--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ collections_dir: collections
 collections:
   staff_members:
     output: true
-    permalink: /:site/:collection
+    permalink: /:collection/:name
