--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ collections_dir: collections
 collections:
   staff_members:
     output: true
-    permalink: /:collection/:name
+    permalink: /ankit-web/:collection/:name
