--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 theme: minima
 
-collections_dir: collections
+collections_dir: my_collections
 
 collections:
   staff_members:
     output: true
-    permalink: /ankit-web/:collection/:name
